variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:8: error: not found: value estDurBiscuit
if (estDurBiscuit()){
    ^RunHalf:16: error: not found: value estDurBiscuit
  if (estDurBiscuit()){
      ^